fixed long usernames not wrapping

--- a/css/default/forums.css
+++ b/css/default/forums.css
@@ -158,6 +158,7 @@
 .post .sidebar h3 {
     margin: 0;
     font-size: 1rem;
+    overflow-wrap: break-word;
 }
 
 .post .sidebar p {
